@@ -1,3 +1,9 @@
+= Unreleased
+
+* Fixed a bug that caused too many tags to be popped from the tag
+  stack during tree building, when encountering a closing tag that had
+  no matching opening tag. [bug=1880420]
+
 = 4.9.1 (20200517)
 
 * Added a keyword argument 'on_duplicate_attribute' to the
